Fix the toolbar overlap issue

--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,7 @@
+main{
+  padding-top: 64px;
+}
+
 .middle-centered {
   display: flex;
   align-items: center;
